--- a/angular.json
+++ b/angular.json
@@ -120,7 +120,10 @@
         },
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
-          "options": {}
+          "options": {
+            "baseHref": "https://RusuGabriel.github.io/Webpage/",
+            "branch": "production"
+          }
         }
       }
     }
