--- a/angular.json
+++ b/angular.json
@@ -62,7 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "webpage:build"
+            "browserTarget": "webpage:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
@@ -122,7 +123,8 @@
           "builder": "angular-cli-ghpages:deploy",
           "options": {
             "baseHref": "https://RusuGabriel.github.io/Webpage/",
-            "branch": "production"
+            "branch": "production",
+            "proxyConfig": "src/proxy.conf.json"
           }
         }
       }
