--- a/angular.json
+++ b/angular.json
@@ -62,8 +62,7 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "webpage:build",
-            "proxyConfig": "src/proxy.conf.json"
+            "browserTarget": "webpage:build"
           },
           "configurations": {
             "production": {
@@ -122,9 +121,7 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "baseHref": "https://RusuGabriel.github.io/Webpage/",
-            "branch": "production",
-            "proxyConfig": "src/proxy.conf.json"
+            "branch": "production"
           }
         }
       }
