--- a/package.json
+++ b/package.json
@@ -8,43 +8,42 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "install": "npm install",
-    "update": "ng update @angular/core@12 @angular/cli@12"
+    "deploy": "ng deploy --no-silent"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.14",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
-    "rxjs": "~6.5.5",
-    "semantic-ui-css": "^2.4.1",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "@angular/animations": "~17.3.2",
+    "@angular/common": "~17.3.2",
+    "@angular/compiler": "~17.3.2",
+    "@angular/core": "~17.3.2",
+    "@angular/forms": "~17.3.2",
+    "@angular/platform-browser": "~17.3.2",
+    "@angular/platform-browser-dynamic": "~17.3.2",
+    "@angular/router": "~17.3.2",
+    "rxjs": "~7.8.1",
+    "semantic-ui-css": "^2.5.0",
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.19",
-    "@angular/cli": "~11.2.19",
-    "@angular/compiler-cli": "~11.2.14",
-    "@types/jasmine": "~3.5.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^6.0.0-next.1",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "@angular-devkit/build-angular": "~17.3.3",
+    "@angular/cli": "~17.3.3",
+    "@angular/compiler-cli": "~17.3.2",
+    "@types/jasmine": "~5.1.4",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "^20.12.3",
+    "angular-cli-ghpages": "^1.0.7",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~5.1.2",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.3",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.6"
+    "ts-node": "~10.9.2",
+    "tslint": "~6.1.3",
+    "typescript": "~5.4.3"
   }
 }
