--- a/angular.json
+++ b/angular.json
@@ -122,7 +122,8 @@
         "deploy": {
           "builder": "angular-cli-ghpages:deploy",
           "options": {
-            "baseHref": "https://gabriel-rusu.github.io/webpage-v1/",
+            "buildTarget": "webpage:build:production",
+            "cname": "webpage-v1.gabriel-rusu.dev",
             "branch": "production"
           }
         }
